--- a/css/style.css
+++ b/css/style.css
@@ -224,21 +224,29 @@ a {
 }
 
 .nav-list {
-    margin-left: 80px;
+ .nav-list ul li {
+    width: auto;
+    padding: 0 0px;
+   
+   
 
+}
 
 }
 
 .nav-list ul {
     display: flex;
     height: 100%;
-    justify-content: start;
+   
+    
 
 }
 
 .nav-list ul li {
     width: auto;
-    padding: 0 10px;
+    padding: 0 50px;
+   
+   
 
 }
 
@@ -340,9 +348,13 @@ a {
 .nav ul .active a {
     color: orange;
 }
-/* 
+
 @media(max-width:600px){
-    .nav{
-        
-    }
-} */
+.nav-list ul li {
+    width: auto;
+    padding: 0 10px;
+
+
+
+}
+}
